--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-devtools')
 	compile('org.apache.commons:commons-csv:1.4')
+	compile('org.apache.commons:commons-text:1.6')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
